0.23.3	UNRELEASED

 * Add support for ``-a`` argument to
   ``dulwich.cli.commit``. (Jelmer Vernooĳ)

 * Add support for merge drivers.
   (Jelmer Vernooĳ)

 * Add support for Git revision syntax operators ``~`` and ``^`` in
   ``dulwich.objectspec.parse_object``, e.g. ``HEAD~1``, ``HEAD^2``.
   (Jelmer Vernooĳ)

 * Add support for ``GIT_CONFIG_GLOBAL`` and ``GIT_CONFIG_SYSTEM``
   environment variables to override global and system configuration
   paths. (Jelmer Vernooĳ, #1193)

 * ``dulwich.porcelain.diff``: Support diffing two commits
   and diffing cached and working tree. (Jelmer Vernooĳ)

 * Add ``format-patch`` command in porcelain. (Jelmer Vernooĳ)

 * Add functions for creating bundles and ``BundleClient``
   for interacting with bundles. (Jelmer Vernooĳ, #1246)

 * Add support for ``core.commitGraph`` configuration setting to control
   whether commit-graph files are used for performance optimization.
   (Jelmer Vernooĳ)

 * Add ``reflog`` command in porcelain. (Jelmer Vernooĳ)

 * Optimize writing unchanged refs by avoiding unnecessary fsync
   when ref already has the desired value. File locking behavior
   is preserved to ensure proper concurrency control.
   (Dan Villiom Podlaski Christiansen, Jelmer Vernooĳ, #1120)

0.23.2	2025-07-07

 * Print deprecations on usage, not import.
   (Alyssa Coghlan, #1650)

 * Add support for ``core.protectHFS`` configuration setting to protect
   against paths that could be misinterpreted on HFS+ filesystems.
   (Jelmer Vernooĳ, #246)

 * Only write Git index extensions when they contain meaningful data.
   Previously, dulwich would write empty extensions to the index file,
   causing unnecessary bloat.
   (Andrew Shadura, Jelmer Vernooĳ, #1643)

 * Document that ``porcelain.push`` returns per-ref status information
   in the ``SendPackResult`` object. Added test coverage to verify this
   functionality works as expected.
   (Jelmer Vernooĳ, #780)
